fix(docker): update docker image to java 25